--- a/app/src/main/res/layout/activity_info_content.xml
+++ b/app/src/main/res/layout/activity_info_content.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.info.content.InfoContentActivity"
+    android:background="@color/white"
     android:orientation="vertical">
 
 
@@ -35,16 +36,12 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
+    <FrameLayout
+        android:layout_weight="1"
+        android:background="@color/white"
+        android:id="@+id/flFragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-        <FrameLayout
-            android:id="@+id/flFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </androidx.core.widget.NestedScrollView>
+        android:layout_height="0dp"/>
 
 
 
