--- a/app/src/main/res/layout/cv_cardview_environment_tip_info.xml
+++ b/app/src/main/res/layout/cv_cardview_environment_tip_info.xml
@@ -3,22 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="9dp"
-    android:layout_marginBottom="18dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:layout_marginHorizontal="18dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     android:minHeight="150dp"
-    card_view:contentPadding="18dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:layout_height="match_parent" >
+
+        <ImageView
+            android:alpha="0.7"
+            android:background="@drawable/i_box_green"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <ImageView
+            android:alpha="0.7"
+            android:background="@drawable/gradient_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <TextView
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_margin="18dp"
+            card_view:layout_constraintTop_toTopOf="parent"
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,18 +40,25 @@
             android:text="테스트" />
 
         <View
+            android:id="@+id/view"
+            card_view:layout_constraintTop_toBottomOf="@id/tvTitle"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/gray" />
 
         <TextView
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_margin="18dp"
+            card_view:layout_constraintTop_toBottomOf="@id/view"
             android:id="@+id/tvContent"
             android:layout_marginTop="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="내용" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.cardview.widget.CardView>
