--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -93,10 +93,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/teal_200"
+>
 
-                android:padding="10dp">
+                <ImageView
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:background="@drawable/gradient_overlay" />
 
                 <TextView
+                    android:layout_margin="10dp"
                     android:id="@+id/tvClFirstAppInfo1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -108,6 +115,7 @@
 
                 <!-- 모양만 잡으려고 searchView 사용함 나중에 없앨 예정 -->
                 <androidx.appcompat.widget.SearchView
+                    android:layout_margin="10dp"
                     android:id="@+id/svCl1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -117,6 +125,7 @@
                     app:layout_constraintTop_toBottomOf="@id/tvClFirstAppInfo1" />
 
                 <TextView
+                    android:layout_margin="10dp"
                     android:id="@+id/tvClFirstAppInfo2"
                     style="@style/bold_style_white"
                     android:layout_width="wrap_content"
