--- a/app/src/main/res/layout/cv_address_select.xml
+++ b/app/src/main/res/layout/cv_address_select.xml
@@ -1,5 +1,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:padding="8dp"
+    android:layout_marginTop="10dp"
+    android:paddingTop="10dp"
+    android:paddingHorizontal="20dp"
+    android:paddingBottom="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
