--- a/app/src/main/res/layout/fragment_trash_place.xml
+++ b/app/src/main/res/layout/fragment_trash_place.xml
@@ -86,6 +86,7 @@ tools:context=".ui.info.content.trash_place.TrashPlaceFragment">
     android:background="@color/white" >
 
     <TextView
+        android:id="@+id/tvInfoTitle"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
@@ -93,15 +94,23 @@ tools:context=".ui.info.content.trash_place.TrashPlaceFragment">
         android:text="정보" />
 
 
+    <TextView
+        android:layout_marginTop="8dp"
+        android:id="@+id/tvInfoContent"
+        app:layout_constraintTop_toBottomOf="@id/tvInfoTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     android:layout_marginTop="8dp"
     android:padding="16dp"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="100dp"
-    android:background="@color/white" >
+    android:background="@color/white">
 
     <TextView
         app:layout_constraintTop_toTopOf="parent"
@@ -110,23 +119,41 @@ tools:context=".ui.info.content.trash_place.TrashPlaceFragment">
         android:layout_height="wrap_content"
         android:text="생활 쓰레기 배출 방법" />
 
-
-</androidx.constraintlayout.widget.ConstraintLayout> <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_marginTop="8dp"
-    android:padding="16dp"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="100dp"
-    android:background="@color/white" >
-
     <TextView
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="음식물 쓰레기 배출 방법" />
+        android:id="@+id/tvGeneralContent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout> <androidx.constraintlayout.widget.ConstraintLayout
+</LinearLayout>
+    <LinearLayout android:layout_marginTop="8dp"
+        android:padding="16dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="100dp"
+        android:background="@color/white" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="음식물 쓰레기 배출 방법" />
+
+
+        <TextView
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvFoodContent" />
+
+
+    </LinearLayout>
+
+
+
+
+<LinearLayout
     android:layout_marginTop="8dp"
     android:padding="16dp"
     android:orientation="vertical"
@@ -142,7 +169,15 @@ tools:context=".ui.info.content.trash_place.TrashPlaceFragment">
         android:layout_height="wrap_content"
         android:text="재활용 쓰레기 배출 방법" />
 
+    <TextView
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvRecyclContent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
 </LinearLayout>
+
+</LinearLayout>
+
     </androidx.core.widget.NestedScrollView>
