--- a/app/src/main/res/layout/activity_trash_request.xml
+++ b/app/src/main/res/layout/activity_trash_request.xml
@@ -79,9 +79,11 @@
                     android:src="@drawable/ic_down_black"
                     android:layout_margin="20dp"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp" />
+                    android:scaleType="fitEnd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -104,11 +106,21 @@
                     android:layout_height="wrap_content"
                     android:text="쓰레기 이름" />
 
+                <TextView
+                    android:id="@+id/tvTrashType"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding = "15dp"
+                    app:layout_constraintTop_toBottomOf="@id/tvTrashTitle"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:text="테스트"/>
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
             <LinearLayout
-                android:minHeight="500dp"
+                android:minHeight="300dp"
                 android:background="@color/white"
                 android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
@@ -136,7 +148,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:minHeight="500dp"
+                android:minHeight="300dp"
                 android:background="@color/white"
                 android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
