--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -8,24 +8,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
-        android:padding="10dp">
+        android:gravity="center">
         <ImageView
             android:id="@+id/iv_image"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:scaleType="fitXY"
+            android:scaleType="fitEnd"
             android:src="@drawable/ic_gallery" />
         <TextView
             android:padding="10dp"
             android:id="@+id/tvTitle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="쓰레기 안내 타이틀"
             android:textStyle="bold"
             android:textColor="@color/black"
-            android:textSize="25sp"
-            android:layout_gravity="center_vertical" />
+            android:textSize="25sp" />
 
 
     </LinearLayout>
