--- a/app/src/main/res/layout/fragment_recycling_symbol.xml
+++ b/app/src/main/res/layout/fragment_recycling_symbol.xml
@@ -17,11 +17,12 @@
 
         <TextView
             android:layout_margin="20dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="재활용 마크에 대한 설명" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="대한민국의 재활용 마크는 주로 모비우스 띠 형태의 회색 화살표로 이루어져 있습니다. 이 마크는 환경부가 관리하며, 재활용이 가능한 제품이나 포장재에 붙여져 있습니다. 일부 제품에는 플라스틱 종류 등을 숫자와 알파벳으로 표시하기도 합니다. 이 마크는 소비자가 재활용 가능한 제품을 쉽게 구분할 수 있게 도와주며, 환경 보호에 기여하고 있습니다." />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
