--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -68,15 +68,14 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.core.widget.NestedScrollView
+        android:fillViewport="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="?attr/actionBarSize"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:paddingTop="?attr/actionBarSize">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -438,14 +437,15 @@
                 <GridView
                     android:id="@+id/gridView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:numColumns="4"
                     android:columnWidth="10dp"
                     android:verticalSpacing="10dp"
                     android:horizontalSpacing="10dp"
                     android:stretchMode="columnWidth"
                     android:padding="16dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_bookmark" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_bookmark"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 
