--- a/app/src/main/res/layout/cv_expandable_list_group.xml
+++ b/app/src/main/res/layout/cv_expandable_list_group.xml
@@ -16,6 +16,9 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
+        android:paddingVertical="20dp"
+        android:paddingHorizontal="30dp"
+        android:background="@drawable/custom_circle_background_gray"
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
