--- a/app/src/main/res/layout/cv_recycling_symbol.xml
+++ b/app/src/main/res/layout/cv_recycling_symbol.xml
@@ -14,6 +14,7 @@
         android:src="@drawable/ic_recycling_black" />
 
     <TextView
+        android:textStyle="bold"
         android:textSize="8sp"
         android:id="@+id/tvInnerText"
         app:layout_constraintStart_toStartOf="@id/ivRecyclingSymbol"
