--- a/app/src/main/res/layout/fragment_search_image.xml
+++ b/app/src/main/res/layout/fragment_search_image.xml
@@ -94,7 +94,7 @@
                 android:paddingVertical="20dp"
                 android:paddingStart="30dp"
                 android:paddingEnd="10dp"
-                android:text="1. 쓰레기 이미지를 학습한 인공지능을 통해 쓰레기를 판별합니다.\n\n2. 이미지가 정확하게 촬영되지 않았을 경우 제대로 인식을 하지 못할 수 있습니다.\n\n3. 가능한 정방향에서 쓰레기가 뚜렷하게 나올 수 있도록 촬영해주세요.\n\n4. 이미지를 인식하는데 최소 10초 정도 걸릴 수 있습니다.\n\n5. 촬영된 이미지는 추후 인공지능 학습에 사용될 수 있습니다."
+                android:text="1. 쓰레기 이미지를 학습한 인공지능을 통해 쓰레기를 판별합니다.\n\n2. 이미지가 정확하게 촬영되지 않았을 경우 제대로 인식을 하지 못할 수 있습니다.\n\n3. 가능한 정방향에서 쓰레기가 뚜렷하게 나올 수 있도록 촬영해주세요.\n\n4. 이미지를 인식하는데 최소 10초 정도 걸릴 수 있습니다.\n\n5. 촬영된 이미지는 추후 인공지능 학습에 사용될 수 있습니다.\n\n6. 학습된 클래스 기반으로 쓰레기를 감지하기 때문에 인식하지 못하는 쓰레기가 있을 수 있습니다."
                 android:textSize="10sp"
                 android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
