--- a/app/src/main/res/layout/activity_developer_info.xml
+++ b/app/src/main/res/layout/activity_developer_info.xml
@@ -1,9 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.setting.DeveloperInfoActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="200dp">
+
+            <View
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="@color/teal_200" />
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@drawable/gradient_background" />
+
+            <TextView
+                android:id="@+id/tvTitle1"
+                style="@style/bold_style_white"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_margin="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="경상국립대학교 코딩 동아리" />
+
+
+            <TextView
+                android:id="@+id/tvTitle2"
+                style="@style/bold_style_white"
+                android:textSize="35sp"
+                app:layout_constraintTop_toBottomOf="@id/tvTitle1"
+                android:layout_marginHorizontal="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="이카루스" />
+
+
+            <TextView
+                android:id="@+id/tvTitle3"
+                style="@style/bold_style_white"
+                android:textSize="13sp"
+                app:layout_constraintTop_toBottomOf="@id/tvTitle2"
+                android:layout_marginHorizontal="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="앱을 이용한 인공지능 이미지 판별 쓰레기 재활용 안내 프로젝트" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <ImageView
+            android:layout_gravity="end"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="10dp"
+            android:scaleType="fitEnd"
+            android:layout_width="300dp"
+            android:layout_height="150dp"
+            android:src="@drawable/mark_logo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:padding="20dp"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_margin="20dp"
+            android:background="@drawable/custom_circle_background_gray"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="동아리 소개"/>
+
+    </LinearLayout>
+
+</androidx.core.widget.NestedScrollView>
